--- a/output/team.html
+++ b/output/team.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading bg-danger text-white">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -24,54 +24,54 @@
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Tiffany</h2>
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">Tiffany Duncan</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">ID: 34</li>
             <li class="list-group-item">Email: <a href="mailto:tiffany@tiffany.com">tiffany@tiffany.com</a></li>
-            <li class="list-group-item">Office number: 4</li>
+            <li class="list-group-item">Office number: 45</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Ethan</h2>
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">Ethan Duncan</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">ID: 87</li>
             <li class="list-group-item">Email: <a href="mailto:ethan@ethan.com">ethan@ethan.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/ethan97" target="_blank" rel="noopener noreferrer">ethan97</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Maya</h2>
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">Maya Duncan</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">ID: 56</li>
             <li class="list-group-item">Email: <a href="mailto:maya@maya.com">maya@maya.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/maya97" target="_blank" rel="noopener noreferrer">maya97</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/maya87" target="_blank" rel="noopener noreferrer">maya87</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Josh</h2>
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">Joshua Duncan</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:josh@josh.com">josh@josh.com</a></li>
-            <li class="list-group-item">School: Wasatch</li>
+            <li class="list-group-item">ID: 98</li>
+            <li class="list-group-item">Email: <a href="mailto:jduncan@jduncan.com">jduncan@jduncan.com</a></li>
+            <li class="list-group-item">School: The University of Utah</li>
         </ul>
     </div>
 </div>
