--- a/output/team.html
+++ b/output/team.html
@@ -25,53 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header bg-success text-white">
-        <h2 class="card-title">Tiffany Duncan</h2>
+        <h2 class="card-title">Joshua Duncan</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:josh@jsoh.com">josh@jsoh.com</a></li>
+            <li class="list-group-item">Office number: 67</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">Tiffany Duncan</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
             <li class="list-group-item">ID: 34</li>
-            <li class="list-group-item">Email: <a href="mailto:tiffany@tiffany.com">tiffany@tiffany.com</a></li>
-            <li class="list-group-item">Office number: 45</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header bg-success text-white">
-        <h2 class="card-title">Ethan Duncan</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 87</li>
-            <li class="list-group-item">Email: <a href="mailto:ethan@ethan.com">ethan@ethan.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/ethan97" target="_blank" rel="noopener noreferrer">ethan97</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header bg-success text-white">
-        <h2 class="card-title">Maya Duncan</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 56</li>
-            <li class="list-group-item">Email: <a href="mailto:maya@maya.com">maya@maya.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/maya87" target="_blank" rel="noopener noreferrer">maya87</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header bg-success text-white">
-        <h2 class="card-title">Joshua Duncan</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 98</li>
-            <li class="list-group-item">Email: <a href="mailto:jduncan@jduncan.com">jduncan@jduncan.com</a></li>
-            <li class="list-group-item">School: The University of Utah</li>
+            <li class="list-group-item">Email: <a href="mailto:tifany@tiff.com">tifany@tiff.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/github8" target="_blank" rel="noopener noreferrer">github8</a></li>
         </ul>
     </div>
 </div>
