added a variable for output

--- a/output/team.html
+++ b/output/team.html
@@ -30,9 +30,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:josh@jsoh.com">josh@jsoh.com</a></li>
-            <li class="list-group-item">Office number: 67</li>
+            <li class="list-group-item">ID: 45</li>
+            <li class="list-group-item">Email: <a href="mailto:josh@josh.com">josh@josh.com</a></li>
+            <li class="list-group-item">Office number: 4</li>
         </ul>
     </div>
 </div>
@@ -43,9 +43,22 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 34</li>
-            <li class="list-group-item">Email: <a href="mailto:tifany@tiff.com">tifany@tiff.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/github8" target="_blank" rel="noopener noreferrer">github8</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:tiffany@tiff.com">tiffany@tiff.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/gasdf" target="_blank" rel="noopener noreferrer">gasdf</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">Skippy</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:dkippy@sfs.com">dkippy@sfs.com</a></li>
+            <li class="list-group-item">School: Wastach</li>
         </ul>
     </div>
 </div>
