added video to readme

--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header bg-success text-white">
-        <h2 class="card-title">Joshua Duncan</h2>
+        <h2 class="card-title">Josh</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 45</li>
-            <li class="list-group-item">Email: <a href="mailto:josh@josh.com">josh@josh.com</a></li>
+            <li class="list-group-item">Email: <a href="mailto:jsoh@sjohs.com">jsoh@sjohs.com</a></li>
             <li class="list-group-item">Office number: 4</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header bg-success text-white">
-        <h2 class="card-title">Tiffany Duncan</h2>
+        <h2 class="card-title">Ethan Duncan</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:tiffany@tiff.com">tiffany@tiff.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/gasdf" target="_blank" rel="noopener noreferrer">gasdf</a></li>
+            <li class="list-group-item">ID: 6</li>
+            <li class="list-group-item">Email: <a href="mailto:jduncan@josh.com">jduncan@josh.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/ethan97" target="_blank" rel="noopener noreferrer">ethan97</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header bg-success text-white">
-        <h2 class="card-title">Skippy</h2>
+        <h2 class="card-title">Maya Duncan</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:dkippy@sfs.com">dkippy@sfs.com</a></li>
-            <li class="list-group-item">School: Wastach</li>
+            <li class="list-group-item">ID: 45</li>
+            <li class="list-group-item">Email: <a href="mailto:maya@maya.com">maya@maya.com</a></li>
+            <li class="list-group-item">School: University of Utah</li>
         </ul>
     </div>
 </div>
